# circom-compat

./: Cargo.toml
src/: lib.rs
src/circom/: builder.rs  circuit.rs  mod.rs  r1cs_reader.rs
src/witness/: witness_calculator.rs
tests/: solidity.rs
